c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/bitwise_shift_double_2.c
int main(void) {
    /* It's illegal to use a double as the right operand of << or >>. */
    return 1 << 2.0;
}